[package]
name = "cranbrook-catering-api"
version = "0.1.0"
edition = "2024"
default-run = "cranbrook-catering-api"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
chrono = "0.4.43"
pdf-extract = "0.10.0"
regex = "1.11.1"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }


[[bin]]
name = "cranbrook-catering-api"
path = "src/main.rs"

[[bin]]
name = "test_pdf"
path = "test_pdf.rs"
