[package]
name = "cranbrook-catering-api"
version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
chrono = "0.4.43"
pdf-extract = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "aws_lc_rs",
] }
lambda_runtime = "1.0.2"
cargo-lambda-macro = { git = "https://github.com/RockBacon9922/cargo-lambda-macro", branch = "main" }
sst_sdk = "0.1.0"


[lib]
path = "src/lib.rs"


[[bin]]
name = "main"
path = "src/main.rs"
